# ClawComms

./: .env.example  .gitignore  docker-compose.yml
bootstrap-cli/: Dockerfile  relay_bootstrap.py  requirements.txt
enrollment-service/: main.py  nats_jwt.py  requirements.txt
nats/: nats.conf
nats/certs/: ca.crt  ca.key  ca.srl  server.crt  server.key
nats/jwt-accounts/: ABS7EBOLREIMTP56ROI3E2HT3ZXCGV3RCE2YWQ5VHO5VSBWV7IIKYZZ7.jwt  AD7NPBJXTPBI3GUEMIWSMH67YNLKKMT4B7KP5RWYGFEUEY5BM6RC4JME.jwt
sdk/: pyproject.toml
sdk/clawcomms/: __init__.py  anomaly.py  client.py  enrollment.py  exceptions.py  identity.py  messaging.py  policy.py  relay.py
sdk/examples/: hello_bot.py
sdk/tests/: run_roundtrip_docker.sh  test_enrollment_live.py  test_roundtrip.py
